# pibench-online

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  editor.worker.js  editor.worker.js.map  index.html  json.worker.js  json.worker.js.map  package.json  vue.config.js
backend/: Cargo.toml  Dockerfile  README.md  build.rs
backend/src/: cpu_info.rs  handlers.rs  main.rs  types.rs
css/: app.d2657351.css  chunk-1c946adc.e78dfcdd.css  chunk-af25d5ee.ef0fc14a.css  chunk-vendors.d9a93284.css
frontend/: package.json  vue.config.js
js/: app.49a2d084.js  app.49a2d084.js.map  chunk-0b65ffb6.54bfc614.js  chunk-0b65ffb6.54bfc614.js.map  chunk-1c946adc.98dbe05d.js  chunk-2d0a3577.28429d9c.js  chunk-2d0a3577.28429d9c.js.map  chunk-2d0a43df.570cad7c.js  chunk-2d0a43df.570cad7c.js.map  chunk-2d0aa90c.191e1dbd.js  chunk-2d0aa90c.191e1dbd.js.map  chunk-2d0aab07.dd4975d9.js  chunk-2d0aab07.dd4975d9.js.map  chunk-2d0abc00.8f429d39.js  chunk-2d0abc00.8f429d39.js.map  chunk-2d0ae937.f79863cf.js  chunk-2d0ae937.f79863cf.js.map  chunk-2d0aeb45.8180a9a7.js  chunk-2d0aeb45.8180a9a7.js.map  chunk-2d0af08c.f126267a.js  chunk-2d0af08c.f126267a.js.map  chunk-2d0afa49.7019b325.js  chunk-2d0afa49.7019b325.js.map  chunk-2d0b6187.931f6e10.js  chunk-2d0b6187.931f6e10.js.map  chunk-2d0ba136.c4160e6c.js  chunk-2d0ba136.c4160e6c.js.map  chunk-2d0bb267.81cdee70.js  chunk-2d0bb267.81cdee70.js.map  chunk-2d0bcec1.a2325562.js  chunk-2d0bcec1.a2325562.js.map  chunk-2d0bdf38.15c3cfe5.js  chunk-2d0bdf38.15c3cfe5.js.map  chunk-2d0bff92.70fee63d.js  chunk-2d0bff92.70fee63d.js.map  (+101 more)
public/: CNAME  (+1 more)
(+15 files in other folders)
